// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerScreen Appbar.Header should render multi select as expected 1`] = `
<withTheme(Appbar.Header)>
  <Appbar.Action
    icon="close"
    onPress={[Function]}
    size={24}
  />
  <withTheme(Appbar.Content)
    title=""
    titleStyle={
      Object {
        "textAlign": "center",
        "width": "100%",
      }
    }
  />
  <Appbar.Action
    icon="check"
    onPress={[Function]}
    size={24}
  />
</withTheme(Appbar.Header)>
`;

exports[`PickerScreen Appbar.Header should render single select as expected 1`] = `
<withTheme(Appbar.Header)>
  <Appbar.Action
    icon="close"
    onPress={[Function]}
    size={24}
  />
  <withTheme(Appbar.Content)
    title=""
    titleStyle={
      Object {
        "textAlign": "center",
        "width": "100%",
      }
    }
  />
</withTheme(Appbar.Header)>
`;

exports[`PickerScreen List list item multi select should properly render custom item content 1`] = `
<Styled(View)>
  <View>
    <withTheme(Text)>
      mock data
    </withTheme(Text)>
    <Styled(Subheading)>
      mock data
    </Styled(Subheading)>
  </View>
</Styled(View)>
`;

exports[`PickerScreen List list item multi select should properly render default item content 1`] = `
<Styled(View)>
  <Styled(Subheading)>
    mock data
  </Styled(Subheading)>
</Styled(View)>
`;

exports[`PickerScreen List list item single select should properly render custom item content 1`] = `
<Styled(View)>
  <View>
    <withTheme(Text)>
      mock data
    </withTheme(Text)>
    <Styled(Subheading)>
      mock data
    </Styled(Subheading)>
  </View>
</Styled(View)>
`;

exports[`PickerScreen List list item single select should properly render default item content 1`] = `
<Styled(View)>
  <Styled(Subheading)>
    mock data
  </Styled(Subheading)>
</Styled(View)>
`;
